# SUPACPP_Labs

./: AnalyseData.cxx  CMakeCache.txt  CMakeLists.txt  CustomFunctions.h  FileHandler.h  HelloWorld  HelloWorld.cxx  Makefile  README.md  cmake_install.cmake
Exercises/Lab3and4/: CalculatePi.cxx  CustomFunctions.cxx  CustomFunctions.h  FiniteFunctions.cxx  FiniteFunctions.h  Makefile  TestFiniteFunctions.cxx
